answer look on mobiles fixed, no longer cutted text

--- a/scss/_questions.scss
+++ b/scss/_questions.scss
@@ -92,6 +92,7 @@
                 visibility: visible;
                 padding-bottom: 1.25rem;
                 transition: all 100ms ease-in-out;
+                overflow: visible;
             }
             &:focus-within .faq__arrow{
                 transform: rotate(180deg);
@@ -134,6 +135,7 @@
             font-size: $body;
             overflow: hidden;
             visibility: hidden;
+            padding-top: 0.125rem;
         }
     }
 }
