--- a/scss/style.css
+++ b/scss/style.css
@@ -169,6 +169,7 @@ body {
   padding-bottom: 1.25rem;
   -webkit-transition: all 100ms ease-in-out;
   transition: all 100ms ease-in-out;
+  overflow: visible;
 }
 
 .main .faq__question:focus-within .faq__arrow {
@@ -220,5 +221,6 @@ body {
   font-size: 0.75rem;
   overflow: hidden;
   visibility: hidden;
+  padding-top: 0.125rem;
 }
 /*# sourceMappingURL=style.css.map */
